--- a/glide.yaml
+++ b/glide.yaml
@@ -40,5 +40,9 @@ import:
   - metrics
 - package: github.com/olivere/elastic
   version: v5.0.39
+- package: github.com/spf13/pflag
+  version: ^1
 - package: github.com/spf13/cobra
+  version: 0.0.1
 - package: github.com/spf13/viper
+  version: ^1
